23-frenchuserguide => FIXED modules